--- a/Tools/Convertible.html
+++ b/Tools/Convertible.html
@@ -25,54 +25,54 @@
             </ul>
         </div>
         <div id="cartypes">
-            <a href="./Sports.html">Sports</a>
-            <a href="./Electric.html">Electric</a>
-            <a href="./Muscle.html">Muscle</a>
-            <a href="./Convertible.html">Convertible</a>
-            <a href="./Sedan.html">Sedan</a>
-            <a href="./SUV.html">SUV</a>
+                <a href="./Sports.html">Sports</a>
+                <a href="./Electric.html">Electric</a>
+                <a href="./Muscle.html">Muscle</a>
+                <a href="./Convertible.html">Convertible</a>
+                <a href="./Sedan.html">Sedan</a>
+                <a href="./SUV.html">SUV</a>
         </div>
     </div>
 
 
 
-    <div class="title-page">
-        <h1>SPORTS CARS</h1>
-        <p>Where sleek design meets thrilling performance, delivering an unmatched driving experience. With agile handling and powerful engines, they ignite the senses and command the road with finesse. Representing automotive excellence, they embody speed, style, and sheer driving pleasure.</p>
+    <div class="title-page tp-convertible">
+        <h1>CONVERTIBLES</h1>
+        <p>Where open-air freedom meets exhilarating drives, convertibles offer an unmatched automotive experience. With their retractable roofs and spirited performance, they awaken a sense of adventure and command attention wherever they roam. Representing the epitome of top-down motoring, they embody style, freedom, and the pure joy of cruising under the sun.</p>
     </div>
 
     <div class="specifications">
         <div class="specs">
             <h3>Average cost</h3>
-            <p>$25,000 - $200,200+</p>
+            <p>$30,000 - $150,000+</p>
         </div>
         <div class="specs">
             <h3>Average HP</h3>
-            <p>200 - 700+</p>
+            <p>150 - 600+</p>
         </div>
         <div class="specs">
             <h3>Design</h3>
-            <p>Sleek, Aerodynamic, Aggressive</p>
+            <p>Stylish, open-air</p>
         </div>
         <div class="specs">
             <h3>Technology</h3>
-            <p>Driver aids, Connectivity</p>
+            <p>Convertible top mechanisms</p>
         </div>
         <div class="specs">
             <h3>Handling</h3>
-            <p>Responsive, Agile, Precise</p>
+            <p>Some rigidity for open-air driving</p>
         </div>
         <div class="specs">
             <h3>Fuel efficiency</h3>
-            <p>Moderate to Low</p>
+            <p>Moderate to high</p>
         </div>
         <div class="specs">
             <h3>Performance</h3>
-            <p>HighSpeed, Powerful engines</p>
+            <p>Enjoyable acceleration</p>
         </div>
         <div class="specs">
             <h3>Experience</h3>
-            <p>Thrilling, Exhilirating</p>
+            <p>Open-air exhilaration</p>
         </div>
     </div>
     
