--- a/Tools/Electric.html
+++ b/Tools/Electric.html
@@ -36,43 +36,43 @@
 
 
 
-    <div class="title-page">
-        <h1>SPORTS CARS</h1>
-        <p>Where sleek design meets thrilling performance, delivering an unmatched driving experience. With agile handling and powerful engines, they ignite the senses and command the road with finesse. Representing automotive excellence, they embody speed, style, and sheer driving pleasure.</p>
+    <div class="title-page tp-electric">
+        <h1>ELECTRIC CARS</h1>
+        <p>Where innovation meets sustainability, electric cars redefine the future of driving. With their silent motors and instant torque, they offer a smooth, eco-friendly ride while reducing carbon emissions. Representing the forefront of automotive technology, they embody efficiency, environmental consciousness, and a commitment to a greener tomorrow.</p>
     </div>
 
     <div class="specifications">
         <div class="specs">
             <h3>Average cost</h3>
-            <p>$25,000 - $200,200+</p>
+            <p>$30,000 - $150,000+</p>
         </div>
         <div class="specs">
             <h3>Average HP</h3>
-            <p>200 - 700+</p>
+            <p>200 - 600+</p>
         </div>
         <div class="specs">
             <h3>Design</h3>
-            <p>Sleek, Aerodynamic, Aggressive</p>
+            <p>Futuristic, aerodynamic, sleek</p>
         </div>
         <div class="specs">
             <h3>Technology</h3>
-            <p>Driver aids, Connectivity</p>
+            <p>Advanced battery management</p>
         </div>
         <div class="specs">
             <h3>Handling</h3>
-            <p>Responsive, Agile, Precise</p>
+            <p>Instant torque delivery</p>
         </div>
         <div class="specs">
             <h3>Fuel efficiency</h3>
-            <p>Moderate to Low</p>
+            <p>High (measured in MPGe)</p>
         </div>
         <div class="specs">
             <h3>Performance</h3>
-            <p>HighSpeed, Powerful engines</p>
+            <p>Impressive acceleration</p>
         </div>
         <div class="specs">
             <h3>Experience</h3>
-            <p>Thrilling, Exhilirating</p>
+            <p>Smooth, silent, responsive</p>
         </div>
     </div>
     
