--- a/Tools/SUV.html
+++ b/Tools/SUV.html
@@ -36,31 +36,31 @@
 
 
 
-    <div class="title-page">
-        <h1>SPORTS CARS</h1>
-        <p>Where sleek design meets thrilling performance, delivering an unmatched driving experience. With agile handling and powerful engines, they ignite the senses and command the road with finesse. Representing automotive excellence, they embody speed, style, and sheer driving pleasure.</p>
+    <div class="title-page tp-suv">
+        <h1>SUV CARS</h1>
+        <p>Where versatility meets rugged capability, SUVs redefine the driving experience. With their commanding presence and off-road prowess, they navigate diverse terrain with ease while providing ample space and comfort for passengers. Representing the epitome of adventure and utility, they embody strength, resilience, and the freedom to explore the great outdoors.</p>
     </div>
 
     <div class="specifications">
         <div class="specs">
             <h3>Average cost</h3>
-            <p>$25,000 - $200,200+</p>
+            <p>$25,000 - $100,000+</p>
         </div>
         <div class="specs">
             <h3>Average HP</h3>
-            <p>200 - 700+</p>
+            <p>150 - 500+</p>
         </div>
         <div class="specs">
             <h3>Design</h3>
-            <p>Sleek, Aerodynamic, Aggressive</p>
+            <p>Robust, versatile, commanding presence</p>
         </div>
         <div class="specs">
             <h3>Technology</h3>
-            <p>Driver aids, Connectivity</p>
+            <p>Off-road capabilities</p>
         </div>
         <div class="specs">
             <h3>Handling</h3>
-            <p>Responsive, Agile, Precise</p>
+            <p>Stable, with good ground clearance</p>
         </div>
         <div class="specs">
             <h3>Fuel efficiency</h3>
@@ -68,11 +68,11 @@
         </div>
         <div class="specs">
             <h3>Performance</h3>
-            <p>HighSpeed, Powerful engines</p>
+            <p>suitable for various terrains</p>
         </div>
         <div class="specs">
             <h3>Experience</h3>
-            <p>Thrilling, Exhilirating</p>
+            <p>Spacious and a sense of security </p>
         </div>
     </div>
     
