--- a/Tools/Sedan.html
+++ b/Tools/Sedan.html
@@ -36,43 +36,43 @@
 
 
 
-    <div class="title-page">
-        <h1>SPORTS CARS</h1>
-        <p>Where sleek design meets thrilling performance, delivering an unmatched driving experience. With agile handling and powerful engines, they ignite the senses and command the road with finesse. Representing automotive excellence, they embody speed, style, and sheer driving pleasure.</p>
+    <div class="title-page tp-sedan">
+        <h1>SEDAN CARS</h1>
+        <p>Where practicality meets refined comfort, sedans offer a sophisticated driving experience. With their spacious interiors and smooth handling, they provide comfort and versatility for everyday journeys. Representing the epitome of practical luxury, they embody elegance, functionality, and a seamless blend of style and substance.</p>
     </div>
 
     <div class="specifications">
         <div class="specs">
             <h3>Average cost</h3>
-            <p>$25,000 - $200,200+</p>
+            <p>$20,000 - $70,000+</p>
         </div>
         <div class="specs">
             <h3>Average HP</h3>
-            <p>200 - 700+</p>
+            <p>150 - 400+</p>
         </div>
         <div class="specs">
             <h3>Design</h3>
-            <p>Sleek, Aerodynamic, Aggressive</p>
+            <p>Elegant, refined, aerodynamic</p>
         </div>
         <div class="specs">
             <h3>Technology</h3>
-            <p>Driver aids, Connectivity</p>
+            <p>Driver assistance features</p>
         </div>
         <div class="specs">
             <h3>Handling</h3>
-            <p>Responsive, Agile, Precise</p>
+            <p>Balanced, comfortable</p>
         </div>
         <div class="specs">
             <h3>Fuel efficiency</h3>
-            <p>Moderate to Low</p>
+            <p>Moderate to high</p>
         </div>
         <div class="specs">
             <h3>Performance</h3>
-            <p>HighSpeed, Powerful engines</p>
+            <p>Sufficient power for daily driving</p>
         </div>
         <div class="specs">
             <h3>Experience</h3>
-            <p>Thrilling, Exhilirating</p>
+            <p>Comfortable, Composed</p>
         </div>
     </div>
     
