--- a/Tools/home.html
+++ b/Tools/home.html
@@ -70,11 +70,11 @@
                 <p>Chevrolet Corvette</p>
             </div>
             <div class="cars-card" id="r35">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="Corvette pic" height="200px">
+                <img src="./pics/Sports/R35 GTR.jpg" alt="Nissan pic" height="200px">
                 <p>Nissan R35 GT-R</p>
             </div>
             <div class="cars-card" id="supra">
-                <img src="./pics/Sports/supra.jpg" alt="Corvette pic" height="200px">
+                <img src="./pics/Sports/supra.jpg" alt="Toyota pic" height="200px">
                 <p>Toyota Supra</p>
             </div>
         </div>
@@ -100,7 +100,7 @@
                 <p>Vovlo C40</p>
             </div>
         </div>
-        <button>About Electric Cars</button>
+        <a href="./Electric.html"><button>About Electric Cars</button></a>
     </div>
 
     <!-- MUSCLE CARS -->
@@ -122,7 +122,7 @@
                 <p>Thunder Bird</p>
             </div>
         </div>
-        <button>About Muscle Cars</button>
+        <a href="./Muscle.html"><button>About Muscle Cars</button></a>
     </div>
 
     <!-- CONVERTIBLE CARS -->
@@ -144,7 +144,7 @@
                 <p>Camaro</p>
             </div>
         </div>
-        <button>About Convertibles</button>
+        <a href="./Convertible.html"><button>About Convertible Cars</button></a>
     </div>
 
     <!-- SEDAN CARS -->
@@ -166,7 +166,7 @@
                 <p>BMW 7 Series</p>
             </div>
         </div>
-        <button>About Sedan Cars</button>
+        <a href="./Sedan.html"><button>About Sedans Cars</button></a>
     </div>
 
     <!-- SUV CARS -->
@@ -188,7 +188,7 @@
                 <p>Toyota Sequoia</p>
             </div>
         </div>
-        <button>About SUV Cars</button>
+        <a href="./SUV.html"><button>About SUV Cars</button></a>
     </div>
 
     <div class="footer section" id="footy">
