--- a/Tools/Muscle.html
+++ b/Tools/Muscle.html
@@ -36,31 +36,31 @@
 
 
 
-    <div class="title-page">
-        <h1>SPORTS CARS</h1>
-        <p>Where sleek design meets thrilling performance, delivering an unmatched driving experience. With agile handling and powerful engines, they ignite the senses and command the road with finesse. Representing automotive excellence, they embody speed, style, and sheer driving pleasure.</p>
+    <div class="title-page tp-muscle">
+        <h1>MUSCLE CARS</h1>
+        <p>Where raw power meets iconic design, muscle cars deliver an unparalleled driving thrill. With their potent engines and dynamic handling, they awaken the senses and dominate the asphalt with unmatched finesse. Representing the epitome of automotive performance, they embody speed, style, and the sheer joy of the open road.</p>
     </div>
 
     <div class="specifications">
         <div class="specs">
             <h3>Average cost</h3>
-            <p>$25,000 - $200,200+</p>
+            <p>$30,000 - $100,000+</p>
         </div>
         <div class="specs">
             <h3>Average HP</h3>
-            <p>200 - 700+</p>
+            <p>400 - 800+</p>
         </div>
         <div class="specs">
             <h3>Design</h3>
-            <p>Sleek, Aerodynamic, Aggressive</p>
+            <p>Bold, muscular, retro-inspired</p>
         </div>
         <div class="specs">
             <h3>Technology</h3>
-            <p>Driver aids, Connectivity</p>
+            <p>Modern infotainment systems</p>
         </div>
         <div class="specs">
             <h3>Handling</h3>
-            <p>Responsive, Agile, Precise</p>
+            <p>Solid, stable, straight-line speed</p>
         </div>
         <div class="specs">
             <h3>Fuel efficiency</h3>
@@ -68,11 +68,11 @@
         </div>
         <div class="specs">
             <h3>Performance</h3>
-            <p>HighSpeed, Powerful engines</p>
+            <p>Roaring engines</p>
         </div>
         <div class="specs">
             <h3>Experience</h3>
-            <p>Thrilling, Exhilirating</p>
+            <p>Raw, visceral, adrenaline-inducing</p>
         </div>
     </div>
     
